# ACLLib

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md
acllib_x/: acllib_x.c  acllib_x.h
doc/: README.md
examples/: CMakeLists.txt  clock.c  keyboard.c  main.c  mouse_click.c
src/: CMakeLists.txt
src/common/: acllib.h  platform.h
src/common/definitions/: color.h
src/common/functionalities/: audio.h  events.h  image.h  paint.h  window.h
src/gtk/: CMakeLists.txt  acllib.c
src/opengl/: CMakeLists.txt  acllib.c  window.c  window.h
src/qt/: CMakeLists.txt  acllib.cpp  window.cpp  window.h
src/qt/components/: IntTimer.cpp  IntTimer.h  KeyboardTranslator.cpp  KeyboardTranslator.h  MouseTranslator.cpp  MouseTranslator.h  PaintArea.cpp  PaintArea.h  timer.cpp
src/qt/functionalities/: acllib.cpp
src/sdl/: CMakeLists.txt  acllib.c
src/sdl/functionalities/: events.c  paint.c
src/win32/: CMakeLists.txt  acllib.c  global.h
src/win32/functionalities/: audio.c  events.c  image.c  paint.c  window.c  window.h
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  basic.cpp
